--- a/src/components/components.css
+++ b/src/components/components.css
@@ -14,6 +14,11 @@ body {
   background: linear-gradient(160deg, rgba(255,255,255,1) 0%, rgba(158,158,158,1) 100%);
 }
 
+
+.AppSection {
+  display: flex;
+  flex-direction: column;
+}
 /* Navbar */
 .navbar {
   display: flex;
@@ -181,9 +186,298 @@ body {
     background-color: black;
     color: white;
   }
+
+.about-us-button {
+  display: inline-block;
+  padding: 0.9rem 1.8rem;
+  font-size: 16px;
+  font-weight: 700;
+  color: rgb(0, 0, 0);
+  border: 3px solid rgb(0, 0, 0);
+  cursor: pointer;
+  position: relative;
+  background-color: transparent;
+  text-decoration: none;
+  overflow: hidden;
+  z-index: 1;
+  font-family: inherit;
+ }
+ 
+ .about-us-button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  transform: translateX(-100%);
+  transition: all .3s;
+  z-index: -1;
+ }
+ 
+ .about-us-button:hover::before {
+  transform: translateX(0);
+ }
+
+  @media screen and (max-width: 1375px) {
+    .about-us-content {
+      background: rgba(0, 0, 0, 0.8);
+      padding: 2rem;
+      border-radius: 10px;
+      opacity: 0.8;
+      color: white;
+  
+      
+    }
+  
+    .about-us-content-back{
+      background: rgba(0, 0, 0, 0.8);
+      padding: 2rem;
+      position: relative;
+      border-radius: 10px;
+      color: white;
+      opacity: 0.8;
+      transform: translate(280px, 100px);
+      min-height: 20vh;
+      max-width: 50%;
+    }
+    
+    .about-us-content h2 {
+      margin-bottom: 1rem;
+      font-size: 2rem;
+    }
+    
+    .about-us-content p {
+      font-size: 1rem;
+      line-height: 1.5;
+    }
+  }
   
 
-  .services{
-    min-height: 100vh;
-    background-color: #878787;
-  }
+  /* Servicios */
+
+
+.services {
+  min-height: 100vh;
+  background-color: #878787;
+  margin: 0;
+}
+
+.services-title {
+  display: flex;
+  color: white;
+  font-family: "Urbanist", sans-serif;
+  font-size: 1rem;
+}
+
+.services-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 columnas */
+  gap: 2rem; /* Espaciado entre las tarjetas */
+  padding: 0 10%;
+  align-items: center;
+}
+
+.service-card {
+  position: relative;
+  overflow: hidden;
+  width: 250px;
+  height: 250px; 
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  background: transparent;
+}
+
+
+.service-card img {
+  width: 100%; 
+  height: 100%;
+  object-fit: cover; 
+  transition: filter 0.3s ease, opacity 0.3s ease;
+}
+
+/* Contenido mostrado al hacer hover */
+.service-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  opacity: 0;
+  color: white;
+  font-family: "Urbanist", sans-serif;
+  font-size: 1.2rem;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+}
+
+/* Hover en la tarjeta */
+.service-card:hover img {
+  filter: blur(4px);
+  opacity: 0.6;
+}
+
+.service-card:hover .service-content {
+  opacity: 1;
+}
+
+.service-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+
+
+
+/* Sección pricing */
+
+.pricing-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  font-family: 'Urbanist', sans-serif;
+  color: white;
+}
+
+.pricing-form {
+  background-color: rgba(44, 44, 44, 0.9); 
+  padding: 20px 30px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 600px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
+
+.pricing-form h3 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: "Urbanist", sans-serif;
+}
+
+.form-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 15px; 
+}
+
+
+.pricing-button {
+  margin-top: 2rem;
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  background-color: transparent;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.pricing-button:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
+
+.pricing-button {
+display: inline-block;
+padding: 0.9rem 1.8rem;
+font-size: 16px;
+
+font-weight: 700;
+color: rgb(255, 255, 255);
+border: 3px solid rgb(255, 255, 255);
+cursor: pointer;
+position: relative;
+background-color: transparent;
+text-decoration: none;
+overflow: hidden;
+z-index: 1;
+font-family: inherit;
+}
+
+.pricing-button::before {
+content: "";
+position: absolute;
+left: 0;
+top: 0;
+width: 100%;
+height: 100%;
+background-color: rgb(255, 255, 255);
+transform: translateX(-100%);
+transition: all .3s;
+z-index: -1;
+}
+
+.pricing-button:hover::before {
+transform: translateX(0);
+}
+
+
+/* Ubicación */
+
+.locations-container{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+
+.locations-body{
+  margin-top: 2%;
+  display: flex;
+  width: 100%;
+  gap: 2rem;
+
+}
+.locations-text-content1{
+ padding: 20px;
+ background: rgba(0, 0, 0, 0.8);
+ padding: 5rem;
+ border-radius: 10px;
+ opacity: 0.8;
+ max-height: 300px;
+ min-height: 200px;
+ min-width: 500px;
+ position: absolute;
+ transform: translate(-10%, -2%);
+
+}
+
+.locations-text-content2{
+  margin-top: 15%;
+  background: rgba(0, 0, 0, 0.8);
+    padding: 5rem;
+    border-radius: 10px;
+    opacity: 0.8;
+    color: white;
+    font-family: "Urbanist", sans-serif;
+    max-height: 400px;
+    min-height: 300px;
+}
+
+.locations-text{
+  width: 50%;
+
+}
+
+.map-container{
+  width: 50%;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  border-radius: 20px;
+  overflow: hidden;
+  min-height: 600px;
+}
+
+
+
+
+
+/* Footer */
