--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,4 +1,3 @@
-/* Mantén tus imports aquí */
 @import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
 
 html, body {
@@ -10,7 +9,7 @@ html, body {
 body {
   margin: 0;
   padding: 0;
-  background: rgb(255, 255, 255); /* Fallback para navegadores antiguos */
+  background: rgb(255, 255, 255);
   background: linear-gradient(160deg, rgba(255,255,255,1) 0%, rgba(158,158,158,1) 100%);
 }
 
@@ -19,7 +18,7 @@ body {
   display: flex;
   flex-direction: column;
 }
-/* Navbar */
+
 .navbar {
   display: flex;
   background-color: black;
@@ -28,15 +27,21 @@ body {
   top: 0;
   left: 0;
   z-index: 1000;
-  opacity: 1; /* Opacidad completa inicialmente */
+  opacity: 1; 
   transition: opacity 0.3s ease, background-color 0.3s ease;
 }
 
-.navbar.scrolled {
-  opacity: 0.6; /* Reduce la opacidad cuando se scrollea */
-  background-color: rgba(0, 0, 0, 0.8); /* Fondo ligeramente transparente */
-}
 
+
+.navbar.scrolled {
+  opacity: 0.6; 
+  background-color: rgba(0, 0, 0, 0.8); 
+}
+.navbar:hover {
+  opacity: 1; 
+  min-height: 70px;
+  transition: all 0.3s ease;
+}
 .navbar-logo {
   width: 30%;
   padding-left: 7%;
@@ -156,7 +161,7 @@ body {
     border-radius: 10px;
     color: white;
     opacity: 0.8;
-    transform: translate(300px, 100px);
+    transform: translate(420px, 120px);
     min-height: 20vh;
     max-width: 50%;
   }
@@ -481,3 +486,25 @@ transform: translateX(0);
 
 
 /* Footer */
+
+.footer{
+  margin: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: rgb(0, 0, 0);
+  color: white;
+  font-family: "Urbanist", sans-serif;
+  min-height: 50px;
+}
+
+.footer-right{
+  display: flex;
+  gap: 1rem;
+}
+
+.footer-center p:hover{
+  cursor: pointer;
+  color: rgb(129, 129, 129);
+  transition: all 0.3s ease-in-out;
+}
