--- a/src/components/components.css
+++ b/src/components/components.css
@@ -287,8 +287,8 @@ body {
 .service-card {
   position: relative;
   overflow: hidden;
-  width: 250px;
-  height: 250px; 
+  width: 280px;
+  height: 330px; 
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -332,6 +332,20 @@ body {
   transform: scale(1.05);
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
   cursor: pointer;
+}
+
+
+@media screen and (max-width: 1375px) {
+  .service-card {
+    position: relative;
+    overflow: hidden;
+    width: 250px;
+    height: 250px; 
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    background: transparent;
+  }
 }
 
 
